# team-yell

./: .gitignore  README.md  pyproject.toml  requirements.txt
closed-src/: loss.py
docs/: oscar.md
sketchpad/: whisper-test.py
src/attacks/: cmaes_attack.py  es_optim.py  pga.py
src/attacks/archived/: cmaes_attack.py  pga.py
src/attacks/checkpoints/: wavperturbation_model.pt
src/models/: perturbation_mlp.py  perturbation_model.py
src/sketchpad/: whisper-test.py
src/testing/: test.py
src/utilities/: data_access.py  logits_loss.py  loss.py  preprocess.py  preprocess_wav.py  run_es.py  run_wav.py  wer.py
src/utilities/archived/: logits_loss.py  preprocess.py  run_es.py
utilities/: preprocess.py
